<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0BFBF"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#e6e6e6"
            android:hint="Nome"
            android:padding="8dp" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="#e6e6e6"
            android:hint="Raça"
            android:padding="8dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#e6e6e6"
        android:gravity="center"
        android:padding="8dp"
        android:text="Vida total" />
    <!-- TextView para exibir o valor de 'Vida total' do personagem, centralizado e com fundo cinza claro. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e6e6e6"
        android:orientation="vertical"
        android:padding="16dp">
        <!-- Este layout contém a seção de classe e atributos do personagem, com um fundo cinza claro e padding. -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#d9534f"
            android:padding="8dp"
            android:text="Classe" />
        <!-- TextView para exibir o título 'Classe', destacado com um fundo vermelho. -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Este layout organiza os atributos do personagem verticalmente. -->

            <!-- Atributo Força -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <!-- Este layout organiza cada atributo e sua barra de progresso na horizontal. -->

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/strength"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
                <!-- TextView para exibir o nome do atributo 'Força'. -->

                <View
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@color/aquamarine" />
                <!-- View representando a barra de progresso do atributo, preenchida com uma cor específica. -->

                <View
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@color/peach" />
                <!-- View representando a barra de progresso do atributo, com uma cor diferente para indicar o valor restante. -->
            </LinearLayout>

            <!-- Repita a estrutura acima para cada atributo adicional -->

            <!-- Atributo Destreza -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/dexterity"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@color/aquamarine" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@color/peach" />
            </LinearLayout>

            <!-- Atributo Sabedoria -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/wisdom"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@color/aquamarine" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@color/peach" />
            </LinearLayout>

            <!--            Intelligence-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/intelligence"
                    android:textAlignment="center"
                    android:textColor="@color/black" />


                <View
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@color/aquamarine" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@color/peach" />
            </LinearLayout>

            <!--            constitution-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/constitution"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@color/aquamarine" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@color/peach" />
            </LinearLayout>

            <!--            Charisma-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/charisma"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@color/aquamarine" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@color/peach" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_marginTop="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Finish"
            android:backgroundTint="@color/purple_200"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>